[package]
authors = ["Nimi Wariboko <nimi.wariboko@livereachmedia.com>"]
edition = "2018"
links = "tflite"
name = "edgetpu"
version = "0.1.0"

[build-dependencies]
cpp_build = "0.5"

[dependencies]
cpp = "0.5"
libc = "0.2"
thiserror = "1.0.17"
tflite = { git = "https://github.com/littletitan/tflite-rs" }

[dev-dependencies]
bytes = "0.5.4"
byteorder = "1.3.4"
image = "0.23.4"
